--- a/index.html
+++ b/index.html
@@ -172,7 +172,13 @@
 
         <ul class="team">
           <li class="photo">
-            <img src="./images/Ivan.jpg" width="270" alt="альтернативный текст" />
+
+            <img srcset="./images/Igor.jpg,
+                         ./images/Igor2x.jpg"
+
+                          src="./images/Igor.jpg"  
+                          alt="альтернативный текст" />
+
             <h3 class="comand-initials">Игорь Демьяненко</h3>
             <p class="icon-item">Product Designer</p>
 
@@ -205,7 +211,12 @@
             </ul>
           </li>
           <li class="photo">
-            <img src="./images/Olga.jpg" width="270" alt="альтернативный текст" />
+            <img srcset="./images/Olga.jpg,
+                         ./images/Olga2x.jpg" 
+
+                         src="./images/Olga.jpg" 
+                         alt="альтернативный текст"/>
+
             <h3 class="comand-initials">Ольга Репина</h3>
             <p class="icon-item">Frontend Developer</p>
             <ul class="comand-link">
@@ -237,7 +248,11 @@
             </ul>
           </li>
           <li class="photo">
-            <img src="./images/Nickolai.jpg" width="270" alt="альтернативный текст" />
+            <img srcset="./images/Nickolai.jpg,
+                         ./images/Nickolai2x.jpg"
+
+                         src="./images/Nickolai.jpg"  
+                         alt="альтернативный текст" />
             <h3 class="comand-initials">Николай Тарасов</h3>
             <p class="icon-item">Marketing</p>
             <ul class="comand-link">
@@ -269,7 +284,11 @@
             </ul>
           </li>
           <li class="photo">
-            <img src="./images/Mikhail.jpg" width="270" alt="альтернативный текст" />
+            <img srcset="./images/Mikhail.jpg,
+                         ./images/Mikhail2x.jpg"
+
+                          src="./images/Mikhail.jpg"
+                          alt="альтернативный текст" />
             <h3 class="comand-initials">Михаил Ермаков</h3>
             <p class="icon-item">UI Designer</p>
             <ul class="comand-link">
