--- a/index.html
+++ b/index.html
@@ -146,19 +146,30 @@
             <div class="work-container">
               <p class="work-content">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
             </div>
-            <img src="./images/img.jpg"  alt="альтернативный текст" />
+            <img srcset="./images/img.jpg,
+                         ./images/img2x.jpg"
+
+                         src="./images/img.jpg"  
+                         alt="альтернативный текст" />
           </li>
           <li class="work-item">
             <div class="work-container">
               <p class="work-content">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
             </div>
-            <img src="./images/img2.jpg"  alt="альтернативный текст" />
+            <img srcset="./images/img2.jpg,
+                         ./images/img2.2x.jpg" 
+
+                         src="./images/img2.jpg"  
+                         alt="альтернативный текст" />
           </li>
           <li class="work-item">
             <div class="work-container">
               <p class="work-content">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
             </div>
-            <img src="./images/img3.jpg"  alt="альтернативный текст" />
+            <img srcset="./images/img3.jpg,
+                         ./images/img3.2x.jpg" 
+                         src="./images/img3.jpg"  
+                         alt="альтернативный текст" />
           </li>
         </ul>
       </div>
@@ -378,6 +389,7 @@
   <!-- футер  -->
   <footer class="footer">
     <div class="container footer-container">
+      <div class="adaptive-footer-conteiner" >
       <div class="adress-container">
         <a href="./" class="logo">Web<span class="logo-footer">Studio</span></a>
 
@@ -392,8 +404,8 @@
           </li>
         </ul>
       </div>
-
-      <div>
+      
+      <div class="footer-socials-container">
         <h3 class="footer-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
 
         <div class="footer-ikon">
@@ -424,7 +436,7 @@
             </svg></a>
         </div>
       </div>
-
+    </div>
 
       <div class="footer-form_container">
         <form class="footer-form" for="join" action="">Подпишитесь на рассылку</form>
