--- a/portfolio.html
+++ b/portfolio.html
@@ -15,15 +15,21 @@
 
 <body class="main-container">
 
-    <header class="portfolio-header">
+    <header class="portfolio-header page-header">
 
         <div class="container header-container">
 
             <nav class="main-nav">
 
                 <a href="./" class="logo">Web<span class="logo-header">Studio</span></a>
-
-                <ul class="site-nav list">
+                <button type="button" class="menu-button " data-menu-button>
+                    <svg class="icon-mobile" width="40px" height="40px" aria-label="переключатель мобильного меню">
+                      <use class="icon-menu" href="./images/symbol-defs.svg#icon-menu40px"></use>
+                      <use class="icon-cross" href="./images/symbol-defs.svg#icon-close40px"></use>
+                    </svg>
+                  </button>
+                  <div class="menu-container" id="menu-container" data-menu>
+                <ul class="site-nav">
 
                     <li class="child">
                         <a href="./index.html" class="link link-nav">Студия</a>
@@ -36,8 +42,8 @@
                     </li>
 
                 </ul>
-            </nav>
-            <ul class="auth-nav list">
+            
+            <ul class="auth-nav">
 
                 <li class="child">
                     <a href="mailto:info@devstudio.com" class="link">
@@ -56,7 +62,8 @@
 
             </ul>
 
-
+          </div>
+        </nav>
         </div>
 
     </header>
@@ -271,11 +278,12 @@
 
     </main>
 
+<!-- футер  -->
+
     <footer class="footer">
 
-
-
-        <div class="container footer-container">
+       <div class="container footer-container">
+        <div class="adaptive-footer-conteiner" >
             <div class="adress-container">
                 <a href="./" class="logo">Web<span class="logo-footer">Studio</span></a>
 
@@ -294,7 +302,7 @@
             </div>
 
 
-            <div class="footer-link">
+            <div class="footer-socials-container">
 
                 <h3 class="footer-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
 
@@ -337,7 +345,7 @@
 
 
             </div>
-
+        </div>
             <div class="footer-form_container">
                 <form class="footer-form" for="join" action="">Подпишитесь на рассылку</form>
 
@@ -352,7 +360,7 @@
         </div>
 
     </footer>
-
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
