--- a/portfolio.html
+++ b/portfolio.html
@@ -96,6 +96,8 @@
 
             </ul>
 
+           
+
         </div>
 
 
@@ -119,7 +121,13 @@
                                 </div>
                             </div>
 
-                            <img src="./images/img4.jpg" alt="" width="100%">
+                            <img srcset=""
+
+                                         src=" ./images/img1.jpg"
+                                          alt="альтернативный текст"
+                                          
+                                          >
+
                             <h2 class="style-title">Технокряк</h2>
                             <p class="text-item">Веб-сайт</p>
                         </a>
@@ -137,7 +145,12 @@
 
                                 </div>
                             </div>
-                            <img src="./images/img5.jpg" alt="" width="100%">
+                            <img srcset=""
+
+                                          src="./images/img2P.jpg"
+                                           alt=""
+                                           >
+
                             <h2 class="style-title">Постер New Orlean vs Golden Star</h2>
                             <p class="text-item">Дизайн</p>
                         </a>
@@ -155,7 +168,12 @@
 
                                 </div>
                             </div>
-                            <img src="./images/img6.jpg" alt="" width="100%">
+                            <img srcset=""
+
+                                          src="./images/img3P.jpg"
+                                           alt=""
+                                           >
+
                             <h2 class="style-title">Ресторан Seafood</h2>
                             <p class="text-item">Приложение</p>
                         </a>
@@ -173,7 +191,12 @@
 
                                 </div>
                             </div>
-                            <img src="./images/img7.jpg" alt="" width="100%">
+                            <img srcset=""
+
+                                          src="./images/img4.jpg" 
+                                          alt=""
+                                          >
+
                             <h2 class="style-title">Проект Prime</h2>
                             <p class="text-item">Маркетинг</p>
                         </a>
@@ -191,7 +214,12 @@
 
                                 </div>
                             </div>
-                            <img src="./images/img8.jpg" alt="" width="100%">
+                            <img srcset=""
+
+                                          src="./images/img5.jpg"
+                                           alt=""
+                                           >
+
                             <h1 class="style-title">Проект Boxes</h2>
                                 <p class="text-item">Приложение</p>
                         </a>
@@ -209,7 +237,12 @@
 
                                 </div>
                             </div>
-                            <img src="./images/img9.jpg" alt="" width="100%">
+                            <img srcset=""
+
+                                          src="./images/img6.jpg" 
+                                          alt=""
+                                          >
+
                             <h2 class="style-title">Inspiration has no Borders</h2>
                             <p class="text-item">Веб-сайт</p>
                         </a>
@@ -227,7 +260,12 @@
 
                                 </div>
                             </div>
-                            <img src="./images/img10.jpg" alt="" width="100%">
+                            <img srcset="" 
+
+                                         src="./images/img7.jpg" 
+                                         alt=""
+                                         >
+
                             <h2 class="style-title">Издание Limited Edition</h2>
                             <p class="text-item">Дизайн</p>
                         </a>
@@ -245,7 +283,12 @@
 
                                 </div>
                             </div>
-                            <img src="./images/img11.jpg" alt="" width="100%">
+                            <img srcset="" 
+
+                                         src="./images/img8.jpg" 
+                                         alt=""
+                                         >
+
                             <h2 class="style-title">Проект LAB</h1>
                                 <p class="text-item">Маркетинг</p>
                         </a>
@@ -263,7 +306,12 @@
 
                                 </div>
                             </div>
-                            <img src="./images/img12.jpg" alt="" width="100%">
+                            <img srcset=""
+
+                                          src="./images/img9.jpg"
+                                           alt=""
+                                           >
+
                             <h2 class="style-title">Growing Business</h2>
                             <p class="text-item">Приложение</p>
                         </a>
