--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
         <ul class="team">
           <li class="photo">
 
-            <img srcset="./images/Igor.jpg,
-                         ./images/Igor2x.jpg"
+            <img srcset="./images/Igor.jpg 1x,
+                         ./images/Igor2x.jpg 2x"
 
                           src="./images/Igor.jpg"  
                           alt="альтернативный текст" />
@@ -229,8 +229,8 @@
             </ul>
           </li>
           <li class="photo">
-            <img srcset="./images/Olga.jpg,
-                         ./images/Olga2x.jpg" 
+            <img srcset="./images/Olga.jpg 1x,
+                         ./images/Olga2x.jpg 2x" 
 
                          src="./images/Olga.jpg" 
                          alt="альтернативный текст"/>
@@ -266,8 +266,8 @@
             </ul>
           </li>
           <li class="photo">
-            <img srcset="./images/Nickolai.jpg,
-                         ./images/Nickolai2x.jpg"
+            <img srcset="./images/Nickolai.jpg 1x,
+                         ./images/Nickolai2x.jpg 2x"
 
                          src="./images/Nickolai.jpg"  
                          alt="альтернативный текст" />
@@ -302,8 +302,8 @@
             </ul>
           </li>
           <li class="photo">
-            <img srcset="./images/Mikhail.jpg,
-                         ./images/Mikhail2x.jpg"
+            <img srcset="./images/Mikhail.jpg 1x,
+                         ./images/Mikhail2x.jpg 2x"
 
                           src="./images/Mikhail.jpg"
                           alt="альтернативный текст" />
