--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
 
                             <img srcset=""
 
-                                         src=" ./images/img1.jpg"
+                                         src=" ./images/img1.2x.jpg"
                                           alt="альтернативный текст"
                                           
                                           >
