--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
                          ./images/Igor2x.jpg 2x"
 
                           src="./images/Igor.jpg"  
-                          alt="альтернативный текст" />
+                          alt="альтернативный текст"
+                          width="450" />
 
             <h3 class="comand-initials">Игорь Демьяненко</h3>
             <p class="icon-item">Product Designer</p>
@@ -233,7 +234,8 @@
                          ./images/Olga2x.jpg 2x" 
 
                          src="./images/Olga.jpg" 
-                         alt="альтернативный текст"/>
+                         alt="альтернативный текст"
+                         width="450"/>
 
             <h3 class="comand-initials">Ольга Репина</h3>
             <p class="icon-item">Frontend Developer</p>
@@ -270,7 +272,8 @@
                          ./images/Nickolai2x.jpg 2x"
 
                          src="./images/Nickolai.jpg"  
-                         alt="альтернативный текст" />
+                         alt="альтернативный текст" 
+                         width="450"/>
             <h3 class="comand-initials">Николай Тарасов</h3>
             <p class="icon-item">Marketing</p>
             <ul class="comand-link">
@@ -306,7 +309,8 @@
                          ./images/Mikhail2x.jpg 2x"
 
                           src="./images/Mikhail.jpg"
-                          alt="альтернативный текст" />
+                          alt="альтернативный текст" 
+                          width="450"/>
             <h3 class="comand-initials">Михаил Ермаков</h3>
             <p class="icon-item">UI Designer</p>
             <ul class="comand-link">
