--- a/portfolio.html
+++ b/portfolio.html
@@ -127,19 +127,19 @@
                                                ./images/Portfolio/Portfolio1-450-2x.jpg 900w"
 
                                         media="(max-width:767px)"
-                                        sizes="(min-width:480px) 450px">
+                                        sizes="(min-width:480px) 450px,100vw">
 
                                <source srcset="./images/Portfolio/Portfolio1-354.jpg 354w,
                                                ./images/Portfolio/Portfolio1-354-2x.jpg 708w"
 
                                         media="(min-width:768px) (max-width:1199px)"
-                                        sizes="(min-width:768px) 354px">
+                                        sizes="(min-width:768px) 354px,100vw">
 
                                <source srcset="./images/Portfolio/Portfolio1-370.jpg 370w,
                                                ./images/Portfolio/Portfolio1-370-2x.jpg 740w"
 
                                         media="(min-width:1200px)"
-                                        sizes="(min-width:1200px) 370px">
+                                        sizes="(min-width:1200px) 370px,100vw">
 
                                 <img src="./images/Portfolio/Portfolio1-354.jpg"
                                         alt="альтернативный текст"/>
@@ -170,19 +170,19 @@
                                                 ./images/Portfolio/Portfolio2-450-2x.jpg 900w"
  
                                          media="(max-width:767px)"
-                                         sizes="(min-width:480px) 450px">
+                                         sizes="(min-width:480px)450px,100vw">
  
                                 <source srcset="./images/Portfolio/Portfolio2-354.jpg 354w,
                                                 ./images/Portfolio/Portfolio2-354-2x.jpg 708w"
  
                                          media="(min-width:768px) (max-width:1199px)"
-                                         sizes="(min-width:768px) 354px">
+                                         sizes="(min-width:768px) 354px,100vw">
  
                                 <source srcset="./images/Portfolio/Portfolio2-370.jpg 370w,
                                                 ./images/Portfolio/Portfolio2-370-2x.jpg 740w"
  
                                          media="(min-width:1200px)"
-                                         sizes="(min-width:1200px) 370px">
+                                         sizes="(min-width:1200px) 370px,100vw">
  
                                  <img src="./images/Portfolio/Portfolio2-354.jpg"
                                          alt="альтернативный текст"/>
