--- a/portfolio.html
+++ b/portfolio.html
@@ -132,7 +132,7 @@
                                <source srcset="./images/Portfolio/Portfolio1-354.jpg 354w,
                                                ./images/Portfolio/Portfolio1-354-2x.jpg 708w"
 
-                                        media="(min-width:768px) (max-width:1199px)"
+                                        media="(min-width:768px)"
                                         sizes="(min-width:768px) 354px,100vw">
 
                                <source srcset="./images/Portfolio/Portfolio1-370.jpg 370w,
@@ -170,19 +170,19 @@
                                                 ./images/Portfolio/Portfolio2-450-2x.jpg 900w"
  
                                                 media="(max-width:767px)"
-                                         sizes="(min-width:480px) 450px,100vw">
+                                                sizes="(min-width:480px) 450px,100vw">
  
                                 <source srcset="./images/Portfolio/Portfolio2-354.jpg 354w,
                                                 ./images/Portfolio/Portfolio2-354-2x.jpg 708w"
  
-                                                media="(min-width:768px) (max-width:1199px)"
-                                         sizes="(min-width:768px) 354px,100vw">
+                                                media="(min-width:768px)"
+                                                sizes="(min-width:768px) 354px,100vw">
  
                                 <source srcset="./images/Portfolio/Portfolio2-370.jpg 370w,
                                                 ./images/Portfolio/Portfolio2-370-2x.jpg 740w"
  
                                                 media="(min-width:1200px)"
-                                         sizes="(min-width:1200px) 370px,100vw">
+                                                sizes="(min-width:1200px) 370px,100vw">
  
                                  <img src="./images/Portfolio/Portfolio2-354.jpg"
                                          alt="альтернативный текст"/>
@@ -219,7 +219,7 @@
                                <source srcset="./images/Portfolio/Portfolio3-354.jpg 354w,
                                                ./images/Portfolio/Portfolio3-354-2x.jpg 708w"
 
-                                        media="(min-width:768px) (max-width:1199px)"
+                                        media="(min-width:768px)"
                                         sizes="(min-width:768px) 354px,100vw">
 
                                <source srcset="./images/Portfolio/Portfolio3-370.jpg 370w,
@@ -263,7 +263,7 @@
                                <source srcset="./images/Portfolio/Portfolio4-354.jpg 354w,
                                                ./images/Portfolio/Portfolio4-354-2x.jpg 708w"
 
-                                        media="(min-width:768px) (max-width:1199px)"
+                                        media="(min-width:768px)"
                                         sizes="(min-width:768px) 354px,100vw">
 
                                <source srcset="./images/Portfolio/Portfolio4-370.jpg 370w,
@@ -307,7 +307,7 @@
                                <source srcset="./images/Portfolio/Portfolio5-354.jpg 354w,
                                                ./images/Portfolio/Portfolio5-354-2x.jpg 708w"
 
-                                        media="(min-width:768px) (max-width:1199px)"
+                                        media="(min-width:768px)"
                                         sizes="(min-width:768px) 354px,100vw">
 
                                <source srcset="./images/Portfolio/Portfolio5-370.jpg 370w,
@@ -351,7 +351,7 @@
                                 <source srcset="./images/Portfolio/Portfolio6-354.jpg 354w,
                                                 ./images/Portfolio/Portfolio6-354-2x.jpg 708w"
  
-                                         media="(min-width:768px) (max-width:1199px)"
+                                         media="(min-width:768px)"
                                          sizes="(min-width:768px) 354px,100vw">
  
                                 <source srcset="./images/Portfolio/Portfolio6-370.jpg 370w,
@@ -395,7 +395,7 @@
                                 <source srcset="./images/Portfolio/Portfolio7-354.jpg 354w,
                                                 ./images/Portfolio/Portfolio7-354-2x.jpg 708w"
  
-                                         media="(min-width:768px) (max-width:1199px)"
+                                         media="(min-width:768px)"
                                          sizes="(min-width:768px) 354px,100vw">
  
                                 <source srcset="./images/Portfolio/Portfolio7-370.jpg 370w,
@@ -439,7 +439,7 @@
                                 <source srcset="./images/Portfolio/Portfolio8-354.jpg 354w,
                                                 ./images/Portfolio/Portfolio8-354-2x.jpg 708w"
  
-                                         media="(min-width:768px) (max-width:1199px)"
+                                         media="(min-width:768px)"
                                          sizes="(min-width:768px) 354px,100vw">
  
                                 <source srcset="./images/Portfolio/Portfolio8-370.jpg 370w,
@@ -483,7 +483,7 @@
                                <source srcset="./images/Portfolio/Portfolio9-354.jpg 354w,
                                                ./images/Portfolio/Portfolio9-354-2x.jpg 708w"
 
-                                        media="(min-width:768px) (max-width:1199px)"
+                                        media="(min-width:768px)"
                                         sizes="(min-width:768px) 354px,100vw">
 
                                <source srcset="./images/Portfolio/Portfolio9-370.jpg 370w,
