--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               <source srcset="./images/ProductDesinger-354.jpg 354w,
                               ./images/ProductDesinger-354-2x.jpg 708w"
 
-                       media="(min-width:768px) (max-width:1199px)"
+                       media="(min-width:768px)"
                        sizes="(min-width:768px) 354px,100vw">
 
               <source srcset="./images/ProductDesinger-270.jpg 270w,
@@ -265,7 +265,7 @@
               <source srcset="./images/FrontendDeveloper-354.jpg 354w,
                               ./images/FrontendDeveloper-354-2x.jpg 708w"
 
-                       media="(min-width:768px) (max-width:1199px)"
+                       media="(min-width:768px)"
                        sizes="(min-width:768px) 354px,100vw">
 
               <source srcset="./images/FrontendDeveloper-270.jpg 270w,
@@ -321,7 +321,7 @@
               <source srcset="./images/Marketing-354.jpg 354w,
                               ./images/Marketing-354-2x.jpg 708w"
 
-                       media="(min-width:768px) (max-width:1199px)"
+                       media="(min-width:768px)"
                        sizes="(min-width:768px) 354px,100vw">
 
               <source srcset="./images/Marketing-270.jpg 270w,
@@ -376,7 +376,7 @@
               <source srcset="./images/UiDesigner-354.jpg 354w,
                               ./images/UiDesigner-354-2x.jpg 708w"
 
-                       media="(min-width:768px) (max-width:1199px)"
+                       media="(min-width:768px)"
                        sizes="(min-width:768px) 354px,100vw">
 
               <source srcset="./images/UiDesigner-270.jpg 270w,
