--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Document</title>
+
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.7.0/modern-normalize.min.css" />
+    
   <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
@@ -19,41 +20,49 @@
 
       <nav class="main-nav">
 
-       <a href="./" class="logo">Web<span class="logo-header">Studio</span></a>
+       <a href="./" class="logo">Web<span class="logo__studio--black">Studio</span></a>
+
         <button type="button" class="menu-button " data-menu-button>
+
           <svg class="icon-mobile" width="40px" height="40px" aria-label="переключатель мобильного меню">
+
             <use class="icon-menu" href="./images/symbol-defs.svg#icon-menu40px"></use>
             <use class="icon-cross" href="./images/symbol-defs.svg#icon-close40px"></use>
+
           </svg>
+
         </button>
       
       <div class="menu-container" id="menu-container" data-menu>
+
         <ul class="site-nav">
 
-          <li class="child">
-            <a href="" class="link link-nav current">Студия</a>
+          <li class="site-nav__item">
+            <a href="" class="link site-nav__link current">Студия</a>
           </li>
-          <li class="child">
-            <a href="./portfolio.html" class="link link-nav">Портфолио</a>
+
+          <li class="site-nav__item">
+            <a href="./portfolio.html" class="link site-nav__link">Портфолио</a>
           </li>
-          <li class="child">
-            <a href="" class="link link-nav">Контакты</a>
+
+          <li class="site-nav__item">
+            <a href="" class="link site-nav__link">Контакты</a>
           </li>
 
         </ul>
 
         <ul class="auth-nav">
 
-          <li class="child">
-            <a href="mailto:info@devstudio.com" class="link">
-              <svg class="icon-nav" width="16px" height="12px">
+          <li class="auth-nav__item">
+            <a href="mailto:info@devstudio.com" class="auth-nav__link">
+              <svg class="auth-nav__link-icon" width="16px" height="12px">
                 <use href="./images/symbol-defs.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a>
           </li>
-          <li class="child">
-            <a href="tel:+380961111111" class="link">
-              <svg class="icon-nav" width="10px" height="16px">
+          <li class="auth-nav__item">
+            <a href="tel:+380961111111" class="auth-nav__link">
+              <svg class="auth-nav__link-icon" width="10px" height="16px">
                 <use href="./images/symbol-defs.svg#icon-tell"></use>
               </svg>
               +380961111111</a>
