--- a/portfolio.html
+++ b/portfolio.html
@@ -40,13 +40,13 @@
                     <ul class="site-nav">
 
                         <li class="site-nav__item">
-                            <a href="./index.html" class="link site-nav__link">Студия</a>
+                            <a href="./index.html" class="link site-nav__link--active">Студия</a>
                         </li>
                         <li class="site-nav__item">
-                            <a href="" class="link site-nav__link current">Портфолио</a>
+                            <a href="" class="link site-nav__link--active current">Портфолио</a>
                         </li>
                         <li class="site-nav__item">
-                            <a href="" class="link site-nav__link">Контакты</a>
+                            <a href="" class="link site-nav__link--active">Контакты</a>
                         </li>
 
                     </ul>
